--- a/FronteEnd/nginx/nginx.conf
+++ b/FronteEnd/nginx/nginx.conf
@@ -2,11 +2,12 @@ events {}
 
 http {
 
-	include /etc/ngingx/conf.d/*.conf;
+  #include /etc/ngingx/conf.d/*.conf;
 
   server {
 
-    listen 3000;
+    listen 80;
+    server_name zajavva.pl www.zajavva.pl;
 
     location / {
       root /usr/share/nginx/html;
