--- a/FronteEnd/nginx/nginx.conf
+++ b/FronteEnd/nginx/nginx.conf
@@ -2,7 +2,7 @@ events {}
 
 http {
 
-  #include /etc/ngingx/conf.d/*.conf;
+  include mime.types;
 
   server {
 
@@ -13,6 +13,35 @@ http {
       root /usr/share/nginx/html;
       index index.html index.htm;
       try_files $uri $uri/ /index.html;
-    }  
+    }
+
+            # Media: images, icons, video, audio, HTC
+        location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+          expires 1M;
+          access_log off;
+          add_header Cache-Control "public";
+        }
+
+        # Javascript and CSS files
+        location ~* \.(?:css|js)$ {
+            try_files $uri =404;
+            expires 1y;
+            access_log off;
+            add_header Cache-Control "public";
+        }
+
+        # Any route containing a file extension (e.g. /devicesfile.js)
+        location ~ ^.+\..+$ {
+            try_files $uri =404;
+        }
+
+
+
+
+    #error_page 500 502 503 504 /50x.html;
+    #location = /50x.html {
+    #  root  /usr/share/nginx/html;
+    #}
+    #return 301 https://zajavva.pl$request_uri;  
   }
 }
